--- a/index.html
+++ b/index.html
@@ -5,19 +5,10 @@
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="node_modules/react/dist/react.js"></script>
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
-  <script src="node_modules/lodash/lodash.js"></script>
 </head>
 <body>
-sdfsdfs
   <div id="app"></div>
-  <script src="src/config/youtube.js"></script>
-  <script src="src/lib/searchYouTube.js"></script>
-  <script src="compiled/src/components/VideoListEntry.js"></script>
-  <script src="compiled/src/components/VideoList.js"></script>
-  <script src="compiled/src/components/VideoPlayer.js"></script>
-  <script src="compiled/src/components/Nav.js"></script>
-  <script src="compiled/src/components/Search.js"></script>
-  <script src="compiled/src/components/App.js"></script>
-  <script src="compiled/src/index.js"></script>
+  <script src="compiled/components/App.js"></script>
+  <script src="compiled/index.js"></script>
 </body>
 </html>
