--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <div id="app"></div>
   <script src="compiled/components/App.js"></script>
+  <script src="compiled/components/Square.js"></script>
+  <script src="compiled/components/Hello.js"></script>
   <script src="compiled/index.js"></script>
 </body>
 </html>
